Support all Arduino architectures
Previously, only support for avr, sam and samd was advertised, but there
is nothing in this library that is architecture-specific, so it should
run on any architecture that properly implements the Arduino API and SPI
library.

This fixes #3

--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Driver for On Semiconductor CAT25 SPI EEPROM chips for AVR, SAM3X (Due)
 paragraph=Supports CAT25M01, CAT25512, CAT25256, CAT25128, CAT25640, CAT25320, CAT25160, CAV25160, CAT25080, CAV25080, CAT25040, CAT25020, and CAT25010, with byte, block, and page transfers.
 category=Data Storage
 url=https://github.com/MattairTech/EEPROM_CAT25
-architectures=avr,sam,samd
+architectures=*
 
